fix height imageWrap

--- a/src/components/forms/CreatePostForm/CreatePostForm.module.css
+++ b/src/components/forms/CreatePostForm/CreatePostForm.module.css
@@ -289,7 +289,7 @@
   }
   .imageWrap {
     width: 746px;
-    height: 720px;
+    height: 787px;
   }
   .uploadLabel {
     margin-bottom: 30px;
